.toList() shortcut